@@ -1,3 +1,11 @@
+2010-04-14  Patrick von Reth
+
+	* added c++ support
+
+2010-03-28  Patrick Spendrin
+
+    * CMakeLists.txt, win_iconv.c: add CMake buildsystem, fix bug from issue tracker
+
 2009-07-25  Yukihiro Nakadaira
 
 	* win_iconv.c, readme.txt: doc fix
